--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
-  "author": "Kapish",
+  "author": "Saksham",
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
